--- a/package.json
+++ b/package.json
@@ -42,5 +42,14 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tw-animate-css": "^1.4.0"
+  },
+  "findUnusedExports": {
+    "include": [
+      "./src/**/*.d.ts",
+      "src/**/*.svelte"
+    ],
+    "exclude": [
+      "./src/**/*.stories.@(js|jsx|ts|tsx)"
+    ]
   }
 }
