--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -22,6 +24,7 @@
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "googleapis": "^160.0.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
@@ -29,9 +32,11 @@
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-iframe": "^1.8.5",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
