--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
+    "node-cache": "^5.1.2",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -37,6 +38,7 @@
     "react-icons": "^5.5.0",
     "react-iframe": "^1.8.5",
     "recharts": "^2.15.4",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
